# backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: docker.yml  test.yml
docker/: supervisord.conf
evmap_backend/: api.py  asgi.py  settings.py  sync.py  urls.py  views.py  wsgi.py
evmap_backend/aggregator/: admin.py  apps.py  models.py
evmap_backend/aggregator/migrations/: 0001_initial.py  0002_alter_connector_type.py
evmap_backend/chargers/: admin.py  apps.py  models.py
evmap_backend/chargers/migrations/: 0001_initial.py  0003_chargepoint_chargers_ch_site_id_1bdbfa_idx_and_more.py  0004_alter_connector_id_from_source_and_more.py  0005_alter_chargepoint_id_from_source_and_more.py
evmap_backend/data_sources/: registry.py
evmap_backend/data_sources/datex2/: admin.py  apps.py  models.py  parser.py  source.py  sync.py
evmap_backend/data_sources/eliso/: apps.py  source.py
evmap_backend/data_sources/goingelectric/: admin.py  apps.py  models.py
evmap_backend/data_sources/management/: __init__.py
evmap_backend/data_sources/monta/: admin.py  apps.py  source.py
evmap_backend/data_sources/nobil/: admin.py  api.py  models.py
evmap_backend/data_sources/openstreetmap/: admin.py  api.py  models.py
evmap_backend/helpers/: database.py
src/: manage.py
src/evmap_backend/: api.py  celery.py  settings.py  sync.py  urls.py  views.py
src/evmap_backend/api/: __init__.py  clustering.py  ge_realtime.py  schemas.py  site_detail.py  sites.py
src/evmap_backend/apikeys/: admin.py  apps.py  models.py  ninja.py
src/evmap_backend/certificates/: mobilithek.pem
src/evmap_backend/chargers/: admin.py  fields.py  models.py
src/evmap_backend/countries/: admin.py  apps.py  models.py
src/evmap_backend/data_sources/: __init__.py  admin.py  api.py  apps.py  models.py  registry.py  sync.py  tasks.py
src/evmap_backend/forms/: widgets.py
src/evmap_backend/helpers/: admin.py  database.py  geo.py
src/templates/: playground.html
src/tests/: conftest.py  settings.py  test_ge_matching.py  test_sync_chargers.py  test_sync_pricing.py  test_sync_statuses.py
templates/: playground.html
tests/: conftest.py  settings.py  test_sync_chargers.py
(+136 files in other folders)
