[project]
name = "evmap-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.*",
    "aiohttp==3.13.*",
    "requests==2.32.*",
    "opening-hours-py==1.1.*",
    "django-countries==8.2.*",
    "django-ninja==1.5.*",
    "python-dotenv==1.2.*",
    "psycopg[binary, pool]==3.3.*",
    "django-solo==2.5.*",
    "paho-mqtt==2.1.*",
    "python-dateutil",
    "pytz",
    "tqdm",
    "defusedxml",
    "cryptography"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest==9.0.*",
    "pytest-django==4.11.*",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["src/tests"]