[project]
name = "evmap-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.*",
    "aiohttp==3.13.*",
    "requests==2.32.*",
    "opening-hours-py==1.1.*",
    "django-countries==8.2.*",
    "django-ninja==1.5.*",
    "python-dotenv==1.2.*",
    "psycopg[c,pool] @ git+https://github.com/akx/psycopg.git@speed-up-split-query#subdirectory=psycopg",
    "django-solo==2.5.*",
    "paho-mqtt==2.1.*",
    "python-dateutil",
    "pytz",
    "tqdm",
    "defusedxml",
    "cryptography",
    "django-pgbulk==3.3.*",
    "dalf==0.7.1",
    "celery[redis]==5.6.*"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest==9.0.*",
    "pytest-django==4.11.*",
    "django-silk==5.5.*"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["src/tests"]